--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -1,3 +1,11 @@
 .App {
+    margin: 0 auto;
+    padding: 20px;
+    width: 700px;
+}
 
+.title{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
 }
