--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,7 +1,64 @@
-.someClass {
+.wrapper {
+    width: 500px;
+    min-height: 150px;
+    font-family: Hack, sans-serif;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #c3c3c3;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: rgba(163, 163, 163, 0.2) 5px 5px 4px 0;
+}
 
+
+
+.button {
+    padding: 5px 10px ;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    box-shadow: rgba(163, 163, 163, 0.59) 5px 5px 4px 0;
+}
+.button:hover{
+    background-color: #f8f8f8;
+}
+
+.totalUsers {
+    display: block;
+    text-align: center;
+    font-family: Hack, sans-serif;
+    font-size: 20px;
+}
+.error,
+.inputTitle {
+    width: 250px;
+    height: 30px;
+    margin: 0 10px 0 0;
+    border-radius: 10px;
+    border: 1px solid transparent;
+    outline: none;
+    padding: 0 20px 0 10px;
 }
 
 .error {
     border: 1px solid red;
+}
+
+.errorTitle{
+    display: block;
+    font-size: 12px;
+    font-style: italic;
+    font-weight: 700;
+    color: red;
+    min-height: 20px;
+    line-height: 20px;
+}
+
+.inputTitle:focus {
+    font-family: Hack, sans-serif;
+
 }
