--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,12 +1,26 @@
-.superInput {
+.error {
+    color: red;
+    font-style: italic;
 
+}
+
+.superInput {
+    box-sizing: border-box;
+    padding: 5px 10px;
+    background-color: #f8f8f8;
+    width: 250px;
+    min-height: 40px;
+    margin: 5px;
+    border: 2px solid #eee;
+    border-radius: 5px;
+    box-shadow: rgba(163, 163, 163, 0.2) 5px 5px 4px 0;
+    font-size: 14px;
+    font-style: italic;
+    cursor: pointer;
+    outline: none;
 }
 
 .errorInput {
-    border: 3px solid lime;
-    background: red;
-}
-
-.error {
-    color: red;
+    border: 2px dotted rgba(236, 15, 15);
+    z-index: 3;
 }
