--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -1,7 +1,3 @@
-.blue {
-    border-bottom: 5px solid blue;
-}
-
 .column {
     display: flex;
     flex-direction: column;
@@ -9,5 +5,11 @@
 }
 
 .testSpanError {
-    color: blue;
+    color: red;
+}
+
+
+
+.blue {
+    border-bottom: 5px solid blue;
 }
