--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,7 +1,46 @@
-.default {
-
+.btn {
+    width: 150px;
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #66A182;
+    border-radius: 10px;
+    color: #66A182;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1;
+    margin:8px 0;
+    padding: 15px 30px;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+.btn:hover, .btn:focus {
+    color: #fff;
+    outline: 0;
 }
 
-.red {
-    background: red;
+.btnShadow {
+    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+.btnShadow:hover {
+    box-shadow: 0 0 40px 40px #66A182 inset;
+}
+
+.red{
+
+    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.red:hover {
+    border: 2px solid #e74c3c;
+    box-shadow: 0 0 40px 40px #e74c3c inset;
+}
+
+.btn:disabled{
+    opacity: 0.5;
+    box-shadow: none;
+    color: #e74c3c;
 }
