--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -1,15 +1,24 @@
-.App {
-    margin: 0 auto;
-    padding: 20px;
-    width: 700px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #E4E9F7;
 }
 
-.title{
+.App{
+    margin: 0 auto;
+    padding: 3px;
+    width: 700px;
+
+}
+
+.title {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
 }
 
-.active{
+.active {
     background: orange;
 }
+
